--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="container col-8 col-md-6 col-lg-4 mx-auto">
         <div>
             <form action="home-feed.html" class="text-center">
-                <input type="email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
+                <input type="text" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
                 <input type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
                 <button type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Log in</button>
             </form>
