--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
                 <button type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Log in</button>
             </form>
-            <p class="text-center text-primary mt-5">or <a href="#" class="link-primary">create account.</a></p>
+            <p class="text-center text-primary mt-5">or <a href="./register-account.html" class="link-primary">create account.</a></p>
         </div> 
     </main>
     <footer class="text-center fixed-bottom">
