--- a/register-account.html
+++ b/register-account.html
@@ -13,17 +13,17 @@
 </head>
 <body class="p-3">
     <header class="container mx-auto col-6 mb-3 mt-3 pt-5 pb-5 text-center">
-        <p class="text-primary">Connect with</p>
+        <p class="text-primary">Welcome to</p>
         <h1 class="text-primary display-1">YELLO</h1>
     </header>
     <main class="container col-8 col-md-6 col-lg-4 mx-auto">
         <div>
             <form action="home-feed.html" class="text-center">
-                <input type="text" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
+                <input type="email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
                 <input type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
-                <button type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Log in</button>
+                <button type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Create account</button>
             </form>
-            <p class="text-center text-primary mt-5">or <a href="#" class="link-primary">create account.</a></p>
+            <p class="text-center text-primary mt-5">or <a href="./index.html" class="link-primary">log in.</a></p>
         </div> 
     </main>
     <footer class="text-center fixed-bottom">
