--- a/register-account.html
+++ b/register-account.html
@@ -18,7 +18,8 @@
     </header>
     <main class="container col-8 col-md-6 col-lg-4 mx-auto">
         <div>
-            <form action="home-feed.html" class="text-center">
+            <form action="./index.html" class="text-center">
+                <input type="text" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
                 <input type="email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
                 <input type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
                 <button type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Create account</button>
