--- a/home-feed.html
+++ b/home-feed.html
@@ -37,8 +37,11 @@
         </div>
     </header>
     <main class="p-3 row col-12 col-md-8 mx-auto">
-        <div class="mx-auto pb-5 col-lg-6 col-xl-4 position-sticky">
-            <input class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12" type="search" placeholder="Search...">
+        <div class="mx-auto pb-5 position-sticky">
+            <div class="d-flex justify-content-between">
+                <input class="rounded-3 border-0 mb-3 p-2 ps-4 col-10" type="search" placeholder="Search...">
+                <button type="submit" class="btn btn-primary mb-3 ms-2 text-secondary p-2 col-2 nowrap">SØK</button>
+            </div>
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
@@ -50,7 +53,7 @@
                 <button type="submit" class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish</button>
             </div>
         </div>
-        <div class="mx-auto col-lg-6 col-xl-8">
+        <div class="mx-auto">
             <div class="bg-white rounded-3 p-3 mb-3">
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
