--- a/register-account.html
+++ b/register-account.html
@@ -5,24 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Log in or register to join the YELLO community.">
-    <title>Log in | YELLO</title>
+    <title>Register | YELLO</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="./js/register.js" defer></script>
 </head>
 <body class="p-3">
     <header class="container mx-auto col-6 mb-3 mt-3 pt-5 pb-5 text-center">
         <p class="text-primary">Welcome to</p>
-        <h1 class="text-primary display-1">YELLO</h1>
+        <a href="./index.html">
+            <h1 class="text-primary display-1">YELLO</h1>
+        </a>
     </header>
     <main class="container col-8 col-md-6 col-lg-4 mx-auto">
         <div>
             <form action="./index.html" class="text-center">
-                <input type="text" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
-                <input type="email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
-                <input type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
-                <button type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Create account</button>
+                <input type="text" id="reg-username" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
+                <p id="reg-username-msg"></p>
+                <input type="email" id="reg-email" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Email address" required>
+                <p id="reg-email-msg"></p>
+                <input type="password" id="reg-password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
+                <p id="reg-password-msg"></p>
+                <button type="submit" id="reg-submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Create account</button>
             </form>
             <p class="text-center text-primary mt-5">or <a href="./index.html" class="link-primary">log in.</a></p>
         </div> 
