--- a/register-account.html
+++ b/register-account.html
@@ -15,7 +15,7 @@
 <body class="p-3">
     <header class="container mx-auto col-6 mb-3 mt-3 pt-5 pb-5 text-center">
         <p class="text-primary">Welcome to</p>
-        <a href="./index.html">
+        <a href="./index.html" class="navbar-brand">
             <h1 class="text-primary display-1">YELLO</h1>
         </a>
     </header>
