--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="./js/login.js" defer></script>
 </head>
 <body class="p-3">
     <header class="container mx-auto col-6 mb-3 mt-3 pt-5 pb-5 text-center">
@@ -18,10 +19,12 @@
     </header>
     <main class="container col-8 col-md-6 col-lg-4 mx-auto">
         <div>
-            <form action="home-feed.html" class="text-center">
-                <input type="text" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
-                <input type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
-                <button type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Log in</button>
+            <form id="login-form" action="home-feed.html" class="text-center">
+                <p class="text-warning justify-content-start" id="login-username-msg"></p>
+                <input id="login-username" type="text" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
+                <p class="text-warning justify-content-start" id="login-password-msg"></p>
+                <input id="login-password" type="password" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Password" required>
+                <button id="login-submit" type="submit" class="btn btn-primary col-6 mb-4 text-secondary rounded-pill nowrap">Log in</button>
             </form>
             <p class="text-center text-primary mt-5">or <a href="./register-account.html" class="link-primary">create account.</a></p>
         </div> 
