--- a/register-account.html
+++ b/register-account.html
@@ -21,6 +21,7 @@
     </header>
     <main class="container col-8 col-md-6 col-lg-4 mx-auto">
         <div>
+            <p id="error-msg"></p>
             <form id="reg-form" action="./index.html" class="text-center">
                 <p class="text-warning justify-content-start" id="reg-username-msg"></p>
                 <input type="text" id="reg-username" class="form-control mb-4 rounded-pill p-2 ps-4" placeholder="Username" required>
