--- a/home-feed.html
+++ b/home-feed.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="./js/home-feed.js" defer></script>
 </head>
 <body>
     <header class="bg-primary p-3 mb-5 mx-auto border-radius-lg col-12 sticky-top">
@@ -39,7 +40,7 @@
     <main class="p-3 row col-12 col-md-8 mx-auto">
         <div class="mx-auto pb-5 position-sticky">
             <div class="d-flex justify-content-between">
-                <input class="rounded-3 border-0 mb-3 p-2 ps-4 col-10" type="search" placeholder="Search...">
+                <input id="search-bar" class="rounded-3 border-0 mb-3 p-2 ps-4 col-10" type="search" placeholder="Search...">
                 <button type="submit" class="btn btn-primary mb-3 ms-2 text-secondary p-2 col-2 nowrap">SØK</button>
             </div>
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
