--- a/home-feed.html
+++ b/home-feed.html
@@ -50,74 +50,13 @@
                         <p class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
                     </a>
                 </div>
-                <input class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4" type="text" placeholder="Type here...">
-                <button type="submit" class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish</button>
+                <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text" placeholder="Title">
+                <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4" type="text-area" placeholder="Whats on your mind?"></textarea>
+                <button id="submit-post" type="submit" class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish</button>
             </div>
         </div>
         <div class="mx-auto">
-            <div class="bg-white rounded-3 p-3 mb-3">
-                <div>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/olena-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Olena Johnson</p>
-                    </a>
-                </div>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <img class="rounded-3" width="100%" src="/images/jake-square.jpg" alt="Image from Jake´s YELLO post">
-            </div>
-            <div class="bg-white rounded-3 p-3 mb-3">
-                <div>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jenny-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Jenny Jennifer</p>
-                    </a>
-                </div>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s!</p>
-                <div class="container">
-                    <div class="row">
-                      <div class="col p-1">
-                        <img class="rounded-3" width="100%" src="/images/mason-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                      <div class="col p-1">
-                        <img class="rounded-3" width="100%" src="/images/jeffery-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                      <div class="col p-1">
-                        <img class="rounded-3" width="100%" src="/images/olena-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                      <div class="col p-1">
-                        <img class="rounded-3" width="100%" src="/images/vince-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="bg-white rounded-3 p-3 mb-3">
-                <div>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
-                    </a>
-                </div>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <img class="rounded-3" width="100%" src="/images/post-road.jpg" alt="Image from Jake´s YELLO post">
-            </div>
-            <div class="bg-white rounded-3 p-3 mb-3">
-                <div>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/mason-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Mason Dude</p>
-                    </a>
-                </div>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <div class="container">
-                    <div class="row">
-                      <div class="col-sm p-1">
-                        <img class="rounded-3" width="100%" src="/images/jenny-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                      <div class="col-sm p-1">
-                        <img class="rounded-3" width="100%" src="/images/post-road.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                    </div>
-                  </div>
+            <div id="posts" class="rounded-3 p-3 mb-3">
             </div>
         </div>
     </main>
