prøver å få delete knapp

--- a/home-feed.html
+++ b/home-feed.html
@@ -47,7 +47,7 @@
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
                         <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
+                        <p id="your-username" class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
                     </a>
                 </div>
                 <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text" placeholder="Title">
