--- a/home-feed.html
+++ b/home-feed.html
@@ -8,13 +8,20 @@
     <title>Feed | YELLO</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/2e6e3ac140.js" crossorigin="anonymous"></script>
+    <script defer src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
+        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
+        crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="./js/home-feed.js" defer></script>
 </head>
 <body>
-    <header class="bg-primary p-3 mb-5 mx-auto border-radius-lg col-12 sticky-top">
+    <header class="bg-primary mb-5 mx-auto border-radius-lg col-12 sticky-top">
         <div class="navbar p-3 d-flex mx-auto border-radius-lg col-12 col-md-8 rounded-3 navbar-expand-lg">
             <div class="d-flex justify-content-between">
                 <a class="navbar-brand" href="./home-feed.html"><h1 class="text-white display-6">YELLO</h1></a>
@@ -47,19 +54,41 @@
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
                         <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
-                        <p id="your-username" class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
+                        <p id="your-username" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
                 <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text" placeholder="Title">
                 <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4" type="text-area" placeholder="Whats on your mind?"></textarea>
+                <input id="post-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
+                    placeholder="Place image URL">
                 <button id="submit-post" type="submit" class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish</button>
             </div>
         </div>
         <div class="mx-auto">
-            <div id="posts" class="rounded-3 p-3 mb-3">
+            <div id="posts" class="rounded-3 mb-3">
             </div>
         </div>
     </main>
+
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header border-0">
+                    <h2 class="modal-title text-primary" id="exampleModalLabel">Edit post</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <input id="edit-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text">
+                    <textarea id="edit-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4" type="text-area"></textarea>
+                    <input id="edit-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text">
+                    <button id="submit-post" type="submit"
+                        class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <footer class="text-center">
         <p class="text-primary">YELLO © 2022</p>
     </footer>
