--- a/home-feed.html
+++ b/home-feed.html
@@ -44,7 +44,7 @@
             </div>
         </div>
     </header>
-    <main class="p-3 row col-12 col-md-8 mx-auto">
+    <main class="p-3 row col-10 col-md-8 col-lg-6 mx-auto">
         <div class="mx-auto pb-5 position-sticky">
             <div class="d-flex justify-content-between">
                 <input id="search-bar" class="rounded-3 border-0 mb-3 p-2 ps-4 col-10" type="search" placeholder="Search...">
@@ -72,7 +72,7 @@
 
     <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-            <div class="modal-content">
+            <div class="modal-content p-3">
                 <div class="modal-header border-0">
                     <h2 class="modal-title text-primary" id="exampleModalLabel">Edit post</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
