--- a/home-feed.html
+++ b/home-feed.html
@@ -81,7 +81,7 @@
                     <input id="edit-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text">
                     <textarea id="edit-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4" type="text-area"></textarea>
                     <input id="edit-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text">
-                    <button id="submit-post" type="submit"
+                    <button id="publish-changes" type="submit"
                         class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish changes</button>
                 </div>
             </div>
