--- a/view-post.html
+++ b/view-post.html
@@ -22,7 +22,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@400;600;700&display=swap"
         rel="stylesheet">
-    <script src="./js/home-feed.js" defer></script>
+    <script src="./js/view-post.js" defer></script>
 </head>
 
 <body>
