prøver viw-post side, får ikke opp noe

--- a/view-post.html
+++ b/view-post.html
@@ -55,7 +55,7 @@
     </header>
     <main class="p-3 row col-10 col-md-8 col-lg-6 mx-auto">
         <div class="mx-auto">
-            <div id="posts" class="rounded-3 mb-3">
+            <div id="post" class="rounded-3 mb-3">
             </div>
         </div>
     </main>
