--- a/edit-post.html
+++ b/edit-post.html
@@ -63,6 +63,7 @@
                         <p id="edit-username" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
+                <p id="created"></p>
                 <textarea id="edit-title" class="rounded-3 border-0 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"></textarea>
                 <textarea id="edit-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4"
                     type="text-area"></textarea>
