ting funker, ikke søk

--- a/home-feed.html
+++ b/home-feed.html
@@ -52,8 +52,7 @@
     <main class="p-3 row col-10 col-md-8 col-lg-6 mx-auto">
         <div class="mx-auto pb-5 position-sticky">
             <div class="d-flex justify-content-between">
-                <input id="search-bar" class="rounded-3 border-0 mb-3 p-2 ps-4 col-10" type="search" placeholder="Search...">
-                <button type="submit" class="btn btn-primary mb-3 ms-2 text-secondary p-2 col-2 nowrap">SØK</button>
+                <input id="search-bar" class="rounded-3 border-0 mb-3 p-2 ps-4 col-12" type="search" placeholder="Search...">
             </div>
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div>
@@ -64,8 +63,8 @@
                 </div>
                 <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text" placeholder="Title">
                 <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4" type="text-area" placeholder="Whats on your mind?"></textarea>
-                <!--<input id="post-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
-                    placeholder="Place image URL">  -->
+                <input id="post-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
+                    placeholder="Place image URL"> 
                 <button id="submit-post" type="submit" class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish</button>
             </div>
         </div>
