--- a/home-feed.html
+++ b/home-feed.html
@@ -57,7 +57,7 @@
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
+                        <div class="rounded-circle bg-primary p-4" alt="Jakes profile picture"></div>
                         <p id="your-username" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
