--- a/home-feed.html
+++ b/home-feed.html
@@ -7,19 +7,8 @@
     <meta name="description" content="All your fellow YELLOS will show up here. Check out someones profile by clicking their username or scroll to see whats new.">
     <title>Feed | YELLO</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/2e6e3ac140.js" crossorigin="anonymous"></script>
-    <script defer src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
-        integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js"
-        integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK"
-        crossorigin="anonymous"></script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        
-
+    <script src="https://kit.fontawesome.com/2e6e3ac140.js" crossorigin="anonymous"defer></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
@@ -27,25 +16,28 @@
 </head>
 <body>
     <header class="bg-primary mb-5 mx-auto border-radius-lg col-12 sticky-top">
-        <nav class="navbar navbar-dark p-3 d-flex mx-auto border-radius-lg col-12 col-md-8 rounded-3 navbar-expand-lg">
-            <div class="d-flex justify-content-between">
-                <a class="navbar-brand" href="./home-feed.html"><h1 class="text-white display-6">YELLO</h1></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-sm bg-primary navbar-dark col-10 mx-auto">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./home-feed.html">
+                    <h1 class="text-white display-6">YELLO</h1>
+                </a>
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-            </div>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a href="./home-feed.html" class="text-secondary nav-link">HJEM</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="./profile.html" class="text-secondary nav-link">PROFIL</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="./index.html" class="text-secondary nav-link">LOGG UT</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="./home-feed.html" class="text-secondary nav-link">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./profile.html" class="text-secondary nav-link">PROFILE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./index.html" class="text-secondary nav-link">LOG OUT</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
@@ -57,7 +49,7 @@
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <div class="rounded-circle bg-primary p-4" alt="Jakes profile picture"></div>
+                        <div class="rounded-circle bg-primary p-4 opacity-50" alt="Jakes profile picture"></div>
                         <p id="your-username" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
