--- a/profile.html
+++ b/profile.html
@@ -7,37 +7,37 @@
     <meta name="description" content="Profile overview">
     <title>Profile | YELLO</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script defer src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="bg-primary p-3 mb-5 mx-auto border-radius-lg col-12 sticky-top">
-        <div class="navbar p-3 d-flex mx-auto border-radius-lg col-12 col-md-8 rounded-3 navbar-expand-lg">
-            <div class="d-flex justify-content-between">
-                <a class="navbar-brand" href="./home-feed.html"><h1 class="text-white display-6">YELLO</h1></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <header class="bg-primary mb-5 mx-auto border-radius-lg col-12 sticky-top">
+        <nav class="navbar navbar-expand-sm bg-primary navbar-dark col-10 mx-auto">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./home-feed.html">
+                    <h1 class="text-white display-6">YELLO</h1>
+                </a>
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a href="./home-feed.html" class="text-secondary nav-link">HOME</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./profile.html" class="text-secondary nav-link">PROFILE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="./index.html" class="text-secondary nav-link">LOG OUT</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a href="./home-feed.html" class="text-secondary nav-link">HJEM</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="./profile.html" class="text-secondary nav-link">PROFIL</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="./index.html" class="text-secondary nav-link">LOGG UT</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        </nav>
     </header>
     <main class="container row p-3 col-12 col-md-8 mx-auto">
         <div class="col-lg-6 col-xl-4">
