--- a/edit-post.html
+++ b/edit-post.html
@@ -70,8 +70,8 @@
                 <textarea id="edit-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
                     placeholder="Place image URL"></textarea>
                 <button id="submit-edit" type="submit"
-                    class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">PUBLISH CHANGES</button>
-                    <a href="../home-feed.html" class="btnView btn border-primary col-6 col-lg-8 mb-4 text-primary rounded-pill">BACK TO FEED</a>
+                    class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish changes</button>
+                    <a href="../home-feed.html" class="btnView btn border-primary col-6 col-lg-8 mb-4 text-primary rounded-pill">Back to feed</a>
             </div>
         </div>
     </main>
