--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Oswald:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="./js/profile.js" defer></script>
 </head>
 <body>
     <header class="bg-primary mb-5 mx-auto border-radius-lg col-12 sticky-top">
@@ -43,78 +44,29 @@
         <div class="col-lg-6 col-xl-4">
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div class="position-relative mb-5">
-                    <img class="rounded-3 col-12"  src="/images/jake-square.jpg" alt="Jakes profile picture">
+                    <div class="rounded-3 col-12 bg-primary opacity-50 p-5"  src="/images/jake-square.jpg" alt="Jakes profile picture"></div>
                     <button class="btn btn-primary mb-3 col-6 col-md-8 text-secondary rounded-pill mx-auto position-absolute top-100 start-50 translate-middle" type="button" data-bs-toggle="modal" data-bs-target="#conModal">Connections</button>
                 </div>
-                <h1 class="mb-4">Jake Jackson</h1>
-                <p class="col-md-10 mx-auto mb-5">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type.</p>
+                <h1 id="current-username" class="mb-4"></h1>
             </div>
-            <div class="bg-white rounded-3 p-3 mb-5 text-center">
+            <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
+                        <div class="rounded-circle bg-primary p-4 opacity-50" alt=""></div>
+                        <p id="current-username-create" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
-                <input class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4" type="text" placeholder="Type here...">
-                <button type="submit" class="btn btn-primary mb-3 col-6 col-md-6 text-secondary rounded-pill mx-auto">Publish</button>
+                <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
+                    placeholder="Title">
+                <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4"
+                    type="text-area" placeholder="Whats on your mind?"></textarea>
+                <input id="post-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
+                    placeholder="Place image URL">
+                <button id="submit-post" type="submit"
+                    class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish</button>
             </div>
         </div>
-        <div class="col-lg-6 col-xl-8">
-            <div class="bg-white rounded-3 p-3 mb-3">
-                <div>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
-                    </a>
-                </div>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s!</p>
-                <div class="container">
-                    <div class="row">
-                      <div class="col p-1">
-                        <img class="rounded-3" width="100%" src="/images/mason-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                      <div class="col p-1">
-                        <img class="rounded-3" width="100%" src="/images/jeffery-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                      <div class="col p-1">
-                        <img class="rounded-3" width="100%" src="/images/olena-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                      <div class="col p-1">
-                        <img class="rounded-3" width="100%" src="/images/vince-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                    </div>
-                  </div>
-            </div>
-            <div class="bg-white rounded-3 p-3 mb-3">
-                <div>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
-                    </a>
-                </div>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <img class="rounded-3" width="100%" src="/images/post-road.jpg" alt="Image from Jake´s YELLO post">
-            </div>
-            <div class="bg-white rounded-3 p-3 mb-3">
-                <div>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Jake Jackson</p>
-                    </a>
-                </div>
-                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-                <div class="container">
-                    <div class="row">
-                      <div class="col-sm p-1">
-                        <img class="rounded-3" width="100%" src="/images/jenny-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                      <div class="col-sm p-1">
-                        <img class="rounded-3" width="100%" src="/images/vince-square.jpg" alt="Image from Jake´s YELLO post">
-                      </div>
-                    </div>
-                  </div>
-            </div>
+        <div id="profile-posts" class="mx-auto col-lg-6 col-xl-8">
         </div>
     </main>
     
