--- a/home-feed.html
+++ b/home-feed.html
@@ -41,7 +41,7 @@
             </div>
         </nav>
     </header>
-    <main class="p-3 row col-10 col-md-8 col-lg-6 mx-auto">
+    <main class="p-3 row col-10 col-md-8 col-lg-6 mx-auto d-flex">
         <div class="mx-auto pb-5 position-sticky">
             <div class="d-flex justify-content-between">
                 <input id="search-bar" class="rounded-3 border-0 mb-3 p-2 ps-4 col-12" type="search" placeholder="Search...">
@@ -49,7 +49,7 @@
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <div class="rounded-circle bg-primary p-4 opacity-50" alt="Jakes profile picture"></div>
+                        <div class="rounded-circle bg-primary p-4 opacity-50" alt=""></div>
                         <p id="your-username" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
