kan poste fra egen profil

--- a/profile.html
+++ b/profile.html
@@ -56,13 +56,13 @@
                         <p id="current-username-create" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
-                <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
+                <input id="post-title-profile" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
                     placeholder="Title">
-                <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4"
+                <textarea id="post-content-profile" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4"
                     type="text-area" placeholder="Whats on your mind?"></textarea>
-                <input id="post-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
+                <input id="post-media-profile" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
                     placeholder="Place image URL">
-                <button id="submit-post" type="submit"
+                <button id="submit-post-profile" type="submit"
                     class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish</button>
             </div>
         </div>
