får egne poster på profil

--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div class="position-relative mb-5">
                     <div class="rounded-3 col-12 bg-primary opacity-50 p-5"  src="/images/jake-square.jpg" alt="Jakes profile picture"></div>
-                    <button class="btn btn-primary mb-3 col-6 col-md-8 text-secondary rounded-pill mx-auto position-absolute top-100 start-50 translate-middle" type="button" data-bs-toggle="modal" data-bs-target="#conModal">Connections</button>
+                    <button class="btn btn-primary mb-3 col-6 col-md-8 text-secondary rounded-pill mx-auto position-absolute top-100 start-50 translate-middle" type="button" data-bs-toggle="modal" data-bs-target="#conModal">Fellow yelloers</button>
                 </div>
                 <h1 id="current-username" class="mb-4"></h1>
             </div>
@@ -74,42 +74,10 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header border-0">
-                    <h2 class="modal-title text-primary" id="exampleModalLabel">Connections</h2>
+                    <h2 class="modal-title text-primary" id="exampleModalLabel">Fellow yelloers</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/mason-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Mason Dude</p>
-                    </a>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jeffery-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Espen Pedersen</p>
-                    </a>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jenny-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Anna Helene Sætre</p>
-                    </a>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/vince-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Lasse Bass</p>
-                    </a>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/olena-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Solveig Rebnor</p>
-                    </a>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/mason-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Jenny P. </p>
-                    </a>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/jake-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Therese B. </p>
-                    </a>
-                    <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
-                        <img class="rounded-circle" width="50px" src="/images/vince-square.jpg" alt="Jakes profile picture">
-                        <p class="font-weight-bold ps-3 mb-0 text-black">Nub Nubbe</p>
-                    </a>
+                <div id="profiles-output" class="modal-body">
                 </div>
             </div>
         </div>
