--- a/home-feed.html
+++ b/home-feed.html
@@ -46,25 +46,29 @@
             <div class="d-flex">
                 <input id="search-bar" class="rounded-3 border-0 mb-3 p-2 ps-4 col-12" type="search" placeholder="Search...">
             </div>
-            <div class="bg-white rounded-3 p-3 mb-3 text-center">
+            <div class="bg-white rounded-3 p-3 mb-3">
                 <div>
                     <a class="d-flex align-items-center mb-4 text-decoration-none" href="profile.html">
                         <div class="rounded-circle bg-primary p-4 opacity-50" alt=""></div>
                         <p id="your-username" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
-                <p class="text-warning justify-content-start" id="title-msg"></p>
-                <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text" placeholder="Title">
-                <p class="text-warning justify-content-start" id="content-msg"></p>
-                <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5 mb-4" type="text-area" placeholder="Whats on your mind?"></textarea>
-                <p class="text-warning justify-content-start" id="image-url-msg"></p>
-                <input id="post-media" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light mb-4" type="text"
+                <p class="text-warning text-left mb-1" id="title-msg"></p>
+                <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light" type="text" placeholder="Title">
+                <p class="text-warning text-left mb-1" id="content-msg"></p>
+                <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5" type="text-area" placeholder="Whats on your mind?"></textarea>
+                <p class="text-warning text-left mb-1" id="image-url-msg"></p>
+                <input id="post-media" class="rounded-3 border-0 p-2 ps-4 mx-auto col-12 bg-light mb-5" type="text"
                     placeholder="Place image URL"> 
-                <button id="submit-post" type="submit" class="btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill mx-auto">Publish</button>
+                    <div class="d-flex">
+                        <button id="submit-post" type="submit"
+                    class="mx-auto btn btn-primary mb-3 col-6 col-lg-8 text-secondary rounded-pill">Publish</button>
+
+                    </div>
             </div>
         </div>
         <div class="mx-auto col-lg-7 col-xl-8">
-            <div id="posts" class="rounded-3 mb-3 ">
+            <div id="posts" class="rounded-3 mb-3">
             </div>
         </div>
     </main>
