--- a/home-feed.html
+++ b/home-feed.html
@@ -18,7 +18,7 @@
     <header class="bg-primary mb-5 mx-auto border-radius-lg col-12 sticky-top">
         <nav class="navbar navbar-expand-sm bg-primary navbar-dark col-10 mx-auto">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./home-feed.html">
+                <a class="navbar-brand d-flex" href="./home-feed.html">
                     <h1 class="text-white display-6">YELLO</h1>
                 </a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
@@ -53,11 +53,11 @@
                         <p id="your-username" class="font-weight-bold ps-3 mb-0 text-black"></p>
                     </a>
                 </div>
-                <p class="text-warning text-left mb-1" id="title-msg"></p>
+                <p class="text-primary text-left mb-1" id="title-msg"></p>
                 <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light" type="text" placeholder="Title">
-                <p class="text-warning text-left mb-1" id="content-msg"></p>
+                <p class="text-primary text-left mb-1" id="content-msg"></p>
                 <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5" type="text-area" placeholder="Whats on your mind?"></textarea>
-                <p class="text-warning text-left mb-1" id="image-url-msg"></p>
+                <p class="text-primary text-left mb-1" id="image-url-msg"></p>
                 <input id="post-media" class="rounded-3 border-0 p-2 ps-4 mx-auto col-12 bg-light mb-5" type="text"
                     placeholder="Place image URL"> 
                     <div class="d-flex">
