--- a/home-feed.html
+++ b/home-feed.html
@@ -16,10 +16,10 @@
 </head>
 <body>
     <header class="bg-primary mb-5 mx-auto border-radius-lg col-12 sticky-top">
-        <nav class="navbar navbar-expand-sm bg-primary navbar-dark col-10 mx-auto">
+        <nav class="navbar navbar-expand-sm bg-primary navbar-dark col-12 col-md-10 mx-auto">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex" href="./home-feed.html">
-                    <h1 class="text-white display-6">YELLO</h1>
+                    <h1 class="text-white display-6 ps-3">YELLO</h1>
                 </a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
@@ -41,7 +41,7 @@
             </div>
         </nav>
     </header>
-    <main class="container row p-3 col-12 col-md-10 mx-auto">
+    <main class="container row col-12 col-md-10 mx-auto">
         <div class="col-lg-5 col-xl-4">
             <div class="d-flex">
                 <input id="search-bar" class="rounded-3 border-0 mb-3 p-2 ps-4 col-12" type="search" placeholder="Search...">
@@ -56,7 +56,7 @@
                 <p class="text-primary text-left mb-1" id="title-msg"></p>
                 <input id="post-title" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light" type="text" placeholder="Title">
                 <p class="text-primary text-left mb-1" id="content-msg"></p>
-                <textarea id="post-content" class="rounded-3 border-0 mb-3 p-2 ps-4 mx-auto col-12 bg-light pb-5" type="text-area" placeholder="Whats on your mind?"></textarea>
+                <textarea id="post-content" class="rounded-3 border-0 mb-2 p-2 ps-4 mx-auto col-12 bg-light pb-5" type="text-area" placeholder="Whats on your mind?"></textarea>
                 <p class="text-primary text-left mb-1" id="image-url-msg"></p>
                 <input id="post-media" class="rounded-3 border-0 p-2 ps-4 mx-auto col-12 bg-light mb-5" type="text"
                     placeholder="Place image URL"> 
