--- a/view-post.html
+++ b/view-post.html
@@ -21,10 +21,10 @@
 
 <body>
     <header class="bg-primary mb-5 mx-auto border-radius-lg col-12 sticky-top">
-        <nav class="navbar navbar-expand-sm bg-primary navbar-dark col-10 mx-auto">
+        <nav class="navbar navbar-expand-sm bg-primary navbar-dark col-12 col-md-10 mx-auto">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./home-feed.html">
-                    <h1 class="text-white display-6">YELLO</h1>
+                <a class="navbar-brand d-flex" href="./home-feed.html">
+                    <h1 class="text-white display-6 ps-3">YELLO</h1>
                 </a>
                 <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapsibleNavbar">
