--- a/home-feed.html
+++ b/home-feed.html
@@ -32,7 +32,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav ps-3">
                         <li class="nav-item">
                             <a href="./home-feed.html" class="text-secondary nav-link">HOME</a>
                         </li>
@@ -40,7 +40,7 @@
                             <a href="./profile.html" class="text-secondary nav-link">PROFILE</a>
                         </li>
                         <li class="nav-item">
-                            <a href="./index.html" class="text-secondary nav-link">LOG OUT</a>
+                            <a href="./index.html" class="text-secondary nav-link">SIGN OUT</a>
                         </li>
                     </ul>
                 </div>
