--- a/profile.html
+++ b/profile.html
@@ -50,7 +50,7 @@
         <div class="col-lg-5 col-xl-4">
             <div class="bg-white rounded-3 p-3 mb-3 text-center">
                 <div class="position-relative mb-5">
-                    <div class="rounded-3 col-12 bg-primary opacity-50 p-5"  src="/images/jake-square.jpg" alt="Jakes profile picture"></div>
+                    <img class="rounded-3 col-12"  src="./images/yello-bg.png" alt="Jakes profile picture">
                     <button class="btn btn-primary mb-3 col-6 col-md-8 text-secondary rounded-pill mx-auto position-absolute top-100 start-50 translate-middle" type="button" data-bs-toggle="modal" data-bs-target="#conModal">Fellow yelloers</button>
                 </div>
                 <h1 id="current-username" class="mb-4"></h1>
